--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "ecommerce-console.js",
   "dependencies": {
     "colors": "^1.3.3",
+    "dotenv": "^8.1.0",
     "figlet": "^1.2.4",
     "inquirer": "^7.0.0",
     "mysql": "^2.17.1"
